--- a/roles/ec2-prov/tasks/main.yml
+++ b/roles/ec2-prov/tasks/main.yml
@@ -27,8 +27,8 @@
  - name: Add the newly created EC2 instance(s) to the local host group (located inside the directory)
    local_action: lineinfile
                  dest="/opt/ansible/envpov/inventory/hosts"
-                 regexp="{{ item.public_ip }}"
-                 insertafter="[app_server]" line="{{ item.public_ip }}"
+                 regexp={{ item.public_ip }}
+                 insertafter="[app_server]" line={{ item.public_ip }}
    with_items: ec2.instances
 
 
