--- a/create_infra.yml
+++ b/create_infra.yml
@@ -10,7 +10,7 @@
 
  - hosts: localhost
    connection: local
-   gather_facts: false
+   gather_facts: true
    user: root
    roles:
     - ec2-prov
