--- a/create_infra.yml
+++ b/create_infra.yml
@@ -14,3 +14,13 @@
    user: root
    roles:
     - ec2-prov
+
+ - debug: var=item
+   with_items: ec2.instances
+
+ - name: Wait for SSH to come up
+   local_action: wait_for
+                 host={{ item.public_ip }}
+                 port=22
+                 state=started
+   with_items: '{{ ec2.instances }}'
