--- a/roles/ec2-prov/tasks/main.yml
+++ b/roles/ec2-prov/tasks/main.yml
@@ -45,14 +45,14 @@
                   insertafter="[app_server]" line='{{ item.public_ip }}'
    with_items: '{{ ec2.instances }}'
 
- - name: Wait for the instances to boot by checking the ssh port
-   local_action: wait_for
-          host=item.public_ip
-          port=22
-          delay=60
-          timeout=320
-          state=started
-   with_items: '{{ ec2.instances }}'
+ #- name: Wait for the instances to boot by checking the ssh port
+ #  local_action: wait_for
+ #         host=item.public_ip
+ #         port=22
+ #         delay=60
+ #         timeout=320
+ #         state=started
+ #  with_items: '{{ ec2.instances }}'
 
 
 
