--- a/roles/ec2-prov/tasks/main.yml
+++ b/roles/ec2-prov/tasks/main.yml
@@ -40,9 +40,9 @@
 
  - name: Add the newly created EC2 instance(s) to the local host group (located inside the directory)
    local_action: lineinfile
-                  dest="/opt/ansible/envpov/inventory/hosts"
+                  dest="/opt/ansible/envpov/inventory/hosts_app_server"
                   regexp='{{ item.public_ip }}'
-                  insertafter="[app_server]" line='{{ item.public_ip }}'
+                  insertbefore=BOF line='{{ item.public_ip }}'
    with_items: '{{ ec2.instances }}'
 
  #- name: Wait for the instances to boot by checking the ssh port
